tiny box animation

--- a/animation.css
+++ b/animation.css
@@ -21,3 +21,28 @@
     }
 
 }
+
+
+@keyframes tinyBoxes{
+
+    0%{
+        background-color: red ;
+    }
+
+    25%{
+        background-color: blue;
+    }
+
+    50%{
+        background-color: green;
+    }
+
+    75%{
+        background-color: purple;
+    }
+
+    100%{
+        background-color: red;
+    }
+
+}
