--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
 .tiny{
     height: 150px;
     background-color: red;
+    animation: tinyBoxes 7s ease 2s infinite forwards ;
 }
 
 .small{
