--- a/animation.css
+++ b/animation.css
@@ -96,3 +96,29 @@
     }
 
 }
+
+
+
+@keyframes largeBoxes{
+
+    0%{
+        background-color: darkorange;
+    }
+
+    25%{
+        background-color: orange;
+    }
+
+    50%{
+        background-color: orangered;
+    }
+
+    75%{
+        background-color: green;
+    }
+
+    100%{
+        background-color: darkred; 
+    }
+
+}
